Don't try to show magic constant widget if we couldn't find a context.

This could happen when you hovered a magic constant in a file that
was not yet parsed.

BUG: 283356